Update assignments metadata

--- a/header.html
+++ b/header.html
@@ -26,7 +26,7 @@ var iurl        = getParameterByName('iurl');
 var iref        = getParameterByName('iref');
 
 let institutions = ['UMONS', 'noinstitution'];
-let courses = ['S-BIOG-006', 'S-BIOG-921', 'nocourse'];
+let courses = ['S-BIOG-006', 'S-BIOG-027', 'S-BIOG-921', 'nocourse'];
 
 function toggleDisplay(item, target) {
   var style = item == target ? 'block' : 'none';
